2006-07-01  Kevin Cozens  <kcozens@cvs.gnome.org>

	* configure.in
	* plug-ins/Makefile.am: Renamed RUBYGIMP_UNSTABLE to GIMPRUBY_UNSTABLE
	  to match project name. Set its value to 'yes' in configure.in file.

2006-07-01  Scott Lembcke <lemb0029@gnome.org>

	* ext/ids.c: Added an id for 'flags'.

	* ext/structures.c: Added Gimp::Parasite.

	* ext/rbgimp.h: Added the new id and structure.

	* Added plug-ins/test.rb.

	* gimp-lib/gimp.rb: Moved the PDB module to gimp-lib/pdb.rb. Added some
	  utility methods to the Gimp::Rgb class. Added Gimp.Color as a shortcut
	  for Gimp::Rgb.new. Added the Gimp::Shelf module for persistent
	  storage.

	* ext/*: Removed // style comments.

	* Deleted enumconvert.rb: Didn't realize that this was still lurking
	  around. Should never have been submited to CVS in the first place.

	* ext/conversion.c: Removed an accidental debugging change for
	  converting strings. Began adding functions for parasite conversion.

2006-07-01  Kevin Cozens  <kcozens@cvs.gnome.org>

	* ChangeLog: Minor reformatting to stop long lines from wrapping.

	* configure.in: Require GIMP > 2.3.0 as it should have been all along.

	* plug-ins/Makefile.am: Moved hello.rb to the list of test scripts.
	  Changed a tab to spaces.

2006-06-30  Scott Lembcke <lemb0029@gnome.org>

	* ext/: Removed all references to array stubs. Arrays are now converted
	  in place.
	
	* ext/conversion.c: Array conversion changed to be done in place, not
	  usings stubs.
	
	* ext/conversion.c: int8arrays are now converted to Ruby strings. That
	  way they are more usable as data.
	
	* ext/rbgimpmain.c: Changes is ext/conversion.c no longer requires the
	  GimpParam arrays to be handled by the GC. They are now immediately
	  destroyed.
	
	* ext/: Removed Gimp::ParamRegion structs.

2006-06-27  Scott Lembcke <lemb0029@gnome.org>

	* gimp-lib/gimp.rb: Added #to_proc to PDB::Procedure.
	
	* gimp-lib/rubyfu.rb: Added RubyFu::ParamDef with support for default